--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 /*@import "src/assets/css/normalize.css";*/
-@import "src/assets/css/main.css";
+@import "src/assets/css/style.css";
