--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,58 @@
-<nav>
+<!-- navbar -->
+<nav class="nav" id="nav">
   <div class="nav-center">
     <!-- nav header -->
     <div class="nav-header">
-      <div class="nav-header-logo">
-        <button class="nav-toggle">
-          <i class="fas fa-bars"></i>
-        </button>
-        <img src="assets/images/favicon.ico" class="logo" alt="logo" />
+      <div class="nav-company">
+        <img src="assets/images/logo.ico" class="nav-logo" alt="nav logo" />
+        <span>Tradante</span>
       </div>
-      <div class="nav-header-time">
-        <span>26 May 00:21</span>
-      </div>
+
+      <span class="nav-date">12 May 2022</span>
     </div>
-    <!-- session info -->
-    <div class="nav-session-info">
-      <ng-container *ngIf="loggedInUser">
-        <span>
-          <fa-icon [icon]="['fas', 'user']"></fa-icon> user : {{loggedInUser.username}}
-        </span>
-        <a href="" routerLink="/signout">
-          <fa-icon class="link-icon primary" [icon]="['fas', 'power-off']"></fa-icon>
-        </a>
-      </ng-container>
-      <ng-container *ngIf="!loggedInUser">
-        <Span class="orange">Unauthorized</Span>
-        <span>
-          <fa-icon [icon]="['fas', 'user-plus']"></fa-icon> Register
-        </span>
-      </ng-container>
+    <!-- nav-session -->
+
+    <div class="nav-session">
+      <span [ngClass]="{'nav-session-role':true}">
+        {{loggedInUser ? 'Admin':'Unauthorized Please Log In'}}
+      </span>
+      <div class="nav-user">
+        <ng-container *ngIf="loggedInUser">
+          <div class="nav-dropdown">
+            <span>{{loggedInUser.username}}</span>
+            <div class="nav-dropdown-content container">
+              <ul class="nav-links">
+                <li><a routerLink="/signout">
+                    <fa-icon [icon]="['fas', 'power-off']"></fa-icon> Sign out
+                  </a>
+                </li>
+                <li><a routerLink="/resetpassword">
+                    <fa-icon [icon]="['fas', 'lock']"></fa-icon>Reset Password
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="img-container">
+            <span class="check">
+              <!-- <fa-icon [icon]="['fas', 'check']"></fa-icon> -->
+            </span>
+
+            <img src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
+              class="img user-img" alt="" />
+          </div>
+        </ng-container>
+      </div>
+
+
 
 
     </div>
+
+
+
   </div>
+
 </nav>
 <div class="main-container">
   <aside class="sidebar">
