--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,18 +1,18 @@
 <div class="form-row">
   <label class="form-label">{{label}}</label>
   <input [type]="inputType" [formControl]="control" class="form-input" />
-  <div *ngIf="showErrors()" class="error">
-    <p *ngIf="control.errors?.['required']">Value is required</p>
-    <p *ngIf="control.errors?.['minlength']">
+  <ng-container *ngIf="showErrors()" class="error">
+    <small *ngIf="control.errors?.['required']" class="form-alert">Value is required</small>
+    <small *ngIf="control.errors?.['minlength']" class="form-alert" >
       Value you entered is {{control.errors?.['minlength'].actualLength}}
       charaters long, but it must be at least {{control.errors?.['minlength'].requiredLength}}}
-    </p>
-    <p *ngIf="control.errors?.['maxlength']">
+    </small>
+    <small *ngIf="control.errors?.['maxlength']"class="form-alert">
       Value you entered is {{control.errors?.['maxlength'].actualLength}}
       charaters long, but it cannot be longer than {{control.errors?.['maxlength'].requiredLength}}}
-    </p>
-    <p *ngIf="control.errors?.['pattern']">Invalid format</p>
-    <p *ngIf="control.errors?.['nonUniqueUsername']">Username is taken</p>
-    <p *ngIf="control.errors?.['noConnection']">No internet connection</p>
-  </div>
+    </small>
+    <small *ngIf="control.errors?.['pattern']" class="form-alert">Invalid format</small>
+    <small *ngIf="control.errors?.['nonUniqueUsername']" class="form-alert">Username is taken</small>
+    <small *ngIf="control.errors?.['noConnection']" class="form-alert">No internet connection</small>
+  </ng-container>
 </div>
