--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,20 +13,22 @@
     <!-- nav-session -->
 
     <div class="nav-session">
-      <span [ngClass]="{'nav-session-role':true}">
-        {{loggedInUser ? 'Admin':'Unauthorized Please Log In'}}
+      <span [ngClass]="{ 'nav-session-role': true }">
+        {{ loggedInUser ? "Admin" : "Unauthorized Please Log In" }}
       </span>
       <div class="nav-user">
         <ng-container *ngIf="loggedInUser">
           <div class="nav-dropdown">
-            <span>{{loggedInUser.username}}</span>
+            <span>{{ loggedInUser.username }}</span>
             <div class="nav-dropdown-content container">
               <ul class="nav-links">
-                <li><a routerLink="/signout">
+                <li>
+                  <a routerLink="/signout">
                     <fa-icon [icon]="['fas', 'power-off']"></fa-icon> Sign out
                   </a>
                 </li>
-                <li><a routerLink="/resetpassword">
+                <li>
+                  <a routerLink="/resetpassword">
                     <fa-icon [icon]="['fas', 'lock']"></fa-icon>Reset Password
                   </a>
                 </li>
@@ -38,22 +40,18 @@
               <!-- <fa-icon [icon]="['fas', 'check']"></fa-icon> -->
             </span>
 
-            <img src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
-              class="img user-img" alt="" />
+            <img
+              src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
+              class="img user-img"
+              alt=""
+            />
           </div>
         </ng-container>
       </div>
-
-
-
-
     </div>
-
-
-
   </div>
-
 </nav>
+
 <div class="main-container">
   <aside class="sidebar">
     <!-- links -->
@@ -62,23 +60,35 @@
         <a href="cart.html"><i class="fas fa-cart-plus link-icon"></i>cart</a>
       </li>
       <li>
-        <a href="products.html"><i class="fas fa-search link-icon"></i>search product</a>
+        <a href="products.html"
+          ><i class="fas fa-search link-icon"></i>search product</a
+        >
       </li>
       <li>
-        <a href="about.html"><i class="fas fa-exchange-alt link-icon"></i>transfer stock</a>
+        <a href="about.html"
+          ><i class="fas fa-exchange-alt link-icon"></i>transfer stock</a
+        >
       </li>
       <li>
-        <a href="projects.html"><i class="fas fa-users link-icon"></i>customer</a>
+        <a href="projects.html"
+          ><i class="fas fa-users link-icon"></i>customer</a
+        >
       </li>
       <li>
-        <a href="contact.html"><i class="fas fa-history link-icon"></i>last session report</a>
+        <a href="contact.html"
+          ><i class="fas fa-history link-icon"></i>last session report</a
+        >
       </li>
       <li>
-        <a href="index.html"><i class="fas fa-bullhorn link-icon"></i>promotion</a>
+        <a href="index.html"
+          ><i class="fas fa-bullhorn link-icon"></i>promotion</a
+        >
       </li>
 
       <li>
-        <a href="projects.html"><i class="fas fa-sync link-icon"></i>cloud sync</a>
+        <a href="projects.html"
+          ><i class="fas fa-sync link-icon"></i>cloud sync</a
+        >
       </li>
       <li>
         <a href="contact.html"><i class="fas fa-cog link-icon"></i>settings</a>
@@ -100,5 +110,4 @@
     </ul>
   </aside>
   <router-outlet></router-outlet>
-
 </div>
