--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -80,7 +80,8 @@ body {
 .main-container {
   height: calc(100vh - 7.5rem);
   background: var(--white);
-  padding: 0.1rem 0;
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 676px) {
@@ -154,7 +155,7 @@ ul {
   object-fit: cover;
 }
 
-img:not(.nav-logo) {
+img:not(.logo) {
   width: 100%;
   display: block;
 }
@@ -314,6 +315,28 @@ img:not(.nav-logo) {
 @media screen and (min-width: 676px) {
   .section-center {
     height: calc(100vh - 4rem);
+  }
+}
+
+/*
+=============== 
+Logo
+===============
+*/
+
+.logo:hover {
+  animation: bounce 0.8s ease-in-out infinite;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
@@ -541,7 +564,103 @@ Sidebar
 ===============
 */
 
-.sidebar-toggle {
+.close-btn {
+  font-size: 2rem;
+}
+.close-btn:hover {
+  color: var(--clr-red-light);
+  transform: rotate(360deg);
+}
+
+.links a {
+  display: flex;
+  font-size: 1.15rem;
+  text-transform: capitalize;
+  padding: 1rem 1.5rem;
+  color: var(--clr-white);
+  transition: var(--transition);
+}
+.links a:hover {
+  background: var(--clr-primary-9);
+  color: var(--clr-primary-2);
+  padding-left: 1.75rem;
+}
+.sidebar-icons {
+  align-self: end;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.sidebar-icons li {
+  align-self: flex-end;
+}
+
+.sidebar-icons span {
+  color: var(--clr-primary-9);
+  font-weight: 600;
+}
+
+.sidebar {
+  position: fixed;
+  top: 7.5rem;
+  width: 100%;
+  height: calc(100vh - 7.5rem);
+  background: var(--primary-900);
+  display: grid;
+  grid-template-rows: 1fr auto;
+  row-gap: 1rem;
+  transition: var(--transition);
+  transform: translate(-100%);
+  opacity: 0;
+  z-index: 5;
+}
+
+.show-sidebar {
+  transform: translate(0);
+  opacity: 1;
+}
+
+.overlay {
+  position: fixed;
+  top: 3rem;
+  width: 100%;
+  height: 100%;
+  background: var(--clr-grey-overlay);
+  display: grid;
+  place-items: center;
+  transition: var(--transition);
+  max-width: 1170px;
+  visibility: hidden;
+  z-index: -10;
+}
+
+.link-icon {
+  font-size: 2rem;
+  margin-right: 1rem;
+}
+
+@media screen and (min-width: 676px) {
+  .sidebar {
+    top: 4rem;
+    width: 350px;
+    height: calc(100vh - 4rem);
+    z-index: 5;
+  }
+
+  .show-overlay {
+    visibility: visible;
+    z-index: 4;
+  }
+}
+
+/*
+=============== 
+Sidebar
+===============
+*/
+
+/* .sidebar-toggle {
   position: fixed;
   top: 2rem;
   right: 3rem;
@@ -570,7 +689,7 @@ Sidebar
   }
 }
 
-/* sidebar */
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -588,7 +707,6 @@ Sidebar
 .show-sidebar {
   transform: translate(0);
 }
-/* todo show sidebar */
 
 @media screen and (min-width: 676px) {
   .sidebar {
@@ -639,11 +757,10 @@ Sidebar
 }
 .social-icons a {
   font-size: 1.5rem;
-  /* margin: 0 0.5rem; */
   color: var(--primary-500);
   transition: var(--transition);
 }
 
 .social-icons a:hover {
   color: var(--primary-300);
-}
+} */
