--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -4,7 +4,12 @@
     <!-- nav header -->
     <div class="nav-header">
       <div class="nav-company">
-        <img src="assets/images/logo.ico" class="logo" alt="nav logo" />
+        <img
+          (click)="onLogoClick()"
+          src="assets/images/logo.ico"
+          class="logo"
+          alt="nav logo"
+        />
         <span>Tradante</span>
       </div>
 
