styling employee-item component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-navbar (toggleMenu)="toggleMenu()"></app-navbar>
 <div class="main-container">
   <app-menu [showMenu]="showMenu" (close)="showMenu = !showMenu"></app-menu>
-  <router-outlet></router-outlet>
+  <div class="section-center">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <div
   (click)="showMenu = !showMenu"
