--- a/src/app/modules/hr/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/employee/employee-list/employee-list.component.html
@@ -1,3 +1,5 @@
-<div class="section-center">
-  <p>employee-list works</p>
+<div>Search bar</div>
+<div class="employee-list">
+  <app-employee *ngFor="let i of employees"></app-employee>
 </div>
+<div>pagination</div>
