--- a/src/app/modules/hr/employee/employee-list/employee-list.component.css
+++ b/src/app/modules/hr/employee/employee-list/employee-list.component.css
@@ -1,5 +1,12 @@
-.section-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+:host {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: calc(100vh - var(--navbar-thick));
+  padding: 0 0.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  :host {
+    height: calc(100vh - var(--navbar-thin));
+  }
 }
