--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -62,6 +62,9 @@ html {
   --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
 
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+
   /* rest of the vars */
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-900);
@@ -69,10 +72,10 @@ html {
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
   /* --transition: 0.3s ease-in-out all; */
-  --max-width: 1170px;
+  --max-width: 1420px;
   --fixed-width: 600px;
   --navbar-thick: 7.5rem;
-  --navbar-thin: 3rem;
+  --navbar-thin: 4rem;
 }
 
 body {
@@ -84,7 +87,7 @@ body {
 }
 
 .main-container {
-  height: calc(100vh - var(--navbar-thick));
+  min-height: calc(100vh - var(--navbar-thick));
   background: var(--white);
   max-width: var(--max-width);
   margin: 0 auto;
@@ -92,7 +95,7 @@ body {
 
 @media screen and (min-width: 676px) {
   .main-container {
-    height: calc(100vh - var(--navbar-thin));
+    min-height: calc(100vh - var(--navbar-thin));
   }
 }
 
@@ -314,14 +317,14 @@ img:not(.logo) {
   width: 100vw;
   margin: 0 auto;
   max-width: var(--max-width);
-  background: var(--grey-100);
-  height: calc(100vh - var(--navbar-thick));
-  box-shadow: var(--shadow-2);
+  background: var(--white);
+  min-height: calc(100vh - var(--navbar-thick));
+  /* box-shadow: var(--shadow-2); */
 }
 
 @media screen and (min-width: 676px) {
   .section-center {
-    height: calc(100vh - var(--navbar-thin));
+    min-height: calc(100vh - var(--navbar-thin));
   }
 }
 
@@ -427,8 +430,8 @@ Navbar
 
 .img-container {
   position: relative;
-  width: 2.75rem;
-  height: 2.75rem;
+  width: 3.5rem;
+  height: 3.5rem;
 }
 
 .img-container::before {
@@ -462,10 +465,10 @@ Navbar
 
 .check::before {
   position: absolute;
-  top: -5%;
-  left: -5%;
-  width: 0.75rem;
-  height: 0.75rem;
+  top: -15%;
+  left: -15%;
+  width: 1.5rem;
+  height: 1.5rem;
   background: var(--green-lime);
   border-radius: 50%;
   color: var(--white);
@@ -473,7 +476,7 @@ Navbar
   font-family: "Font Awesome 5 Free";
   font-weight: 800;
   content: "\f007";
-  font-size: 0.7rem;
+  font-size: 1rem;
   display: grid;
   place-items: center;
   z-index: 1;
@@ -575,7 +578,8 @@ Sidebar
   position: fixed;
   top: var(--navbar-thick);
   width: 100%;
-  height: calc(100vh - var(--navbar-thick));
+  height: 100%;
+  /* min-height: calc(100vh - var(--navbar-thick)); */
   background: var(--white);
   display: grid;
   grid-template-rows: 1fr auto;
@@ -631,17 +635,24 @@ Sidebar
 .sidebar-icons {
   align-self: end;
   display: flex;
+  align-items: baseline;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 0.5rem;
+  margin: 0;
 }
 
-.sidebar-icons li {
-  align-self: flex-end;
-}
+/* .sidebar-icons li {
+  align-self: center;
+} */
 
 .sidebar-icons span {
-  color: var(--clr-primary-9);
-  font-weight: 600;
+  font-weight: 800;
+}
+
+.sidebar-license {
+  flex-grow: 1;
+  text-align: center;
+  color: var(--primary-800);
 }
 
 .sidebar-icons button {
@@ -662,7 +673,7 @@ Sidebar
   .sidebar {
     top: var(--navbar-thin);
     width: 350px;
-    height: calc(100vh - var(--navbar-thin));
+    min-height: calc(100vh - var(--navbar-thin));
     z-index: 5;
   }
 
