--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -38,14 +38,15 @@ html {
   /* rest of the colors */
   --black: #222;
   --white: #fff;
-  --red-light: #f8d7da;
-  --red-dark: #842029;
+  --red-light: hsl(360, 71%, 66%);
+  --red-dark: hsl(360, 67%, 44%);
   --green-light: #d1e7dd;
   --green-forest: #228b22;
   --green-lime: #32cd32;
   --green-malachite: #0bda51;
   --green-dark: #0f5132;
   --orange-medium: #ffac1c;
+  --gold: #c59d5f;
 
   /* fonts  */
   --headingFont: "Roboto", sans-serif;
@@ -62,13 +63,16 @@ html {
   --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
 
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+
   /* rest of the vars */
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-900);
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
-  /* --transition: 0.3s ease-in-out all; */
+  --transition-slow: 1.5s ease-in-out all;
   --max-width: 1420px;
   --fixed-width: 600px;
   --navbar-thick: 7.5rem;
@@ -314,7 +318,6 @@ img:not(.logo) {
   width: 100vw;
   margin: 0 auto;
   max-width: var(--max-width);
-  background: var(--white);
   height: calc(100vh - var(--navbar-thick));
   /* box-shadow: var(--shadow-2); */
 }
@@ -324,28 +327,11 @@ img:not(.logo) {
     height: calc(100vh - var(--navbar-thin));
   }
 }
-
 /*
 =============== 
-Logo
+FLipper
 ===============
 */
-
-.logo:hover {
-  animation: bounce 0.8s ease-in-out infinite;
-}
-
-@keyframes bounce {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 
 /*
 =============== 
@@ -665,7 +651,7 @@ Sidebar
   margin-right: 1rem;
 }
 
-@media screen and (min-width: 676px) {
+@media screen and (min-width: 768px) {
   .sidebar {
     top: var(--navbar-thin);
     width: 350px;
@@ -681,45 +667,81 @@ Sidebar
 
 /*
 =============== 
-Sidebar
+Employee list
 ===============
 */
+.employee-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  /* place-items: center; */
+  gap: 0.4rem;
+  /* margin-bottom: 4rem; */
+  padding: 0.25rem;
+  border: 2px solid green;
+  width: 100%;
+  margin: 0 auto;
+}
 
-/* 
-
-@media screen and (min-width: 676px) {
-  .sidebar {
-    width: 400px;
+@media screen and (min-width: 1170px) {
+  .employee-list {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 }
 
-.links a {
-  display: block;
-  font-size: 1.5rem;
-  text-transform: capitalize;
-  padding: 1rem 1.5rem;
-  color: var(--grey-500);
-  transition: var(--transition);
+/* @media screen and (min-width: 576px) {
+  .employee-list {
+    padding: 0.25rem 0.5rem;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+} */
+
+/*
+=============== 
+Single Employee
+===============
+*/
+/* .single-employee {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0 1.25rem;
+  max-width: 25rem;
 }
 
-.links a:hover {
-  background: var(--primary-300);
-  color: var(--primary-600);
-  padding-left: 1.75rem;
+.employee-photo {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
 }
 
-.social-icons {
+.employee-photo img {
+  object-fit: cover;
+  height: 5rem;
+  width: 5rem;
+  border: 0.25rem solid var(--gold);
+  border-radius: 50%;
+}
+.item-info header {
   display: flex;
-  padding-bottom: 2rem;
-  justify-content: center;
-  gap: 0 1rem;
+  justify-content: space-between;
+  border-bottom: 0.5px dotted var(--grey-600);
 }
-.social-icons a {
-  font-size: 1.5rem;
-  color: var(--primary-500);
-  transition: var(--transition);
+.item-info h5 {
+  margin-bottom: 0.5rem;
+}
+.price {
+  color: var(--clr-gold);
+}
+.item-text {
+  margin-bottom: 0;
+  padding-top: 1rem;
 }
 
-.social-icons a:hover {
-  color: var(--primary-300);
+@media screen and (min-width: 576px) {
+  .single-employee {
+    gap: 1rem 2rem;
+    max-width: 40rem;
+  }
 } */
