styling single-employee item

--- a/src/app/modules/auth/welcome/welcome.component.html
+++ b/src/app/modules/auth/welcome/welcome.component.html
@@ -1,3 +1,7 @@
 <div class="section-center">
-  <h3>Welcome to the Clean Application</h3>
+  <div class="welcome">
+    <img src="assets/images/welcome.gif" alt="welcome logo" />
+    <h5>Welcome to the Clean app</h5>
+    <h5>Licenced to TTC</h5>
+  </div>
 </div>
