--- a/src/app/modules/hr/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/employee/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
-<div>Search bar</div>
+<div><h4>Search bar</h4></div>
 <div class="employee-list">
   <app-employee *ngFor="let i of employees"></app-employee>
 </div>
-<div>pagination</div>
+<div><h4>Pagination</h4></div>
