styling employee list

--- a/src/app/modules/hr/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/employee/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
-<div><h4>Search bar</h4></div>
+<app-searcher></app-searcher>
 <div class="employee-list">
   <app-employee *ngFor="let i of employees"></app-employee>
 </div>
-<div><h4>Pagination</h4></div>
+<app-paginator [numberOfPages]="numberOfPages"></app-paginator>
