--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -339,6 +339,78 @@ img:not(.logo) {
     height: calc(100vh - var(--navbar-thin));
   }
 }
+
+/*
+=============== 
+Searcher
+===============
+*/
+
+.search-form {
+  display: flex;
+  max-width: var(--fixed-width);
+  margin: 1rem auto;
+}
+.form-input.search-input {
+  flex: 4 1 0px;
+  border-radius: 0;
+  border-top-left-radius: var(--borderRadius);
+  border-bottom-left-radius: var(--borderRadius);
+}
+.add-new-btn {
+  flex: 1 1 0px;
+  padding: 0;
+  margin-top: 0;
+  border-radius: 0;
+  border-top-right-radius: var(--borderRadius);
+  border-bottom-right-radius: var(--borderRadius);
+}
+
+/*
+=============== 
+Paginator
+===============
+*/
+.paginator {
+  height: 3rem;
+  margin: 0.25rem 0;
+  display: flex;
+  place-content: center;
+  gap: 1rem;
+}
+
+.pages-btns-container {
+  display: flex;
+  gap: 0.25rem;
+  color: var(--white);
+}
+
+.paginator .btn {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.pages-btns-container h3 {
+  margin-bottom: 0;
+  margin-top: 0.25rem;
+}
+
+.page-btn.selected {
+  background: var(--primary-300);
+  color: var(--primary-900);
+}
+.prev-btn,
+.next-btn {
+  background: transparent;
+  border: none;
+  color: var(--primary-500);
+}
+
+.prev-btn:hover,
+.next-btn:hover {
+  color: black;
+}
+
 /*
 =============== 
 Icons
