--- a/src/app/shared/paginator/paginator.component.html
+++ b/src/app/shared/paginator/paginator.component.html
@@ -1,5 +1,5 @@
 <div class="paginator">
-  <button type="button" class="prev-btn" (click)="onPrev()">
+  <button type="button" class="prev-btn" (click)="prev()">
     <i class="fas fa-arrow-left fa-2x"></i>
   </button>
   <div class="pages-btns-container">
@@ -13,7 +13,7 @@
       {{ page }}
     </button>
   </div>
-  <button type="button" class="next-btn" (click)="onNext()">
+  <button type="button" class="next-btn" (click)="next()">
     <i class="fas fa-arrow-right fa-2x"></i>
   </button>
 </div>
