--- a/src/app/modules/hr/employee/employee/employee.component.html
+++ b/src/app/modules/hr/employee/employee/employee.component.html
@@ -11,28 +11,30 @@
     <div class="d-block">
       <div class="employee-img-container">
         <img
-          src="assets/images/users/1.png"
+          [src]="'data:image/png;base64,' + employee.avatar"
           alt="Generic placeholder image"
           class="employee-img"
         />
         <div>
-          <h5 class="name mb-1">Danny McLoan</h5>
-          <p class="rank">Senior Journalist</p>
+          <h5 class="name mb-1">{{ employee.fullName }}</h5>
+          <p class="rank">{{ employee.rank }}</p>
         </div>
       </div>
 
       <div class="flex-grow-1 ms-3">
         <div class="d-flex justify-content-between align-items-center">
           <p class="label">Department</p>
-          <p class="department">IT</p>
+          <p class="department">{{ employee.department }}</p>
         </div>
         <div class="d-flex justify-content-between align-items-center">
           <p class="label">SSN</p>
-          <p class="ssn">415-989-687-875</p>
+          <p class="ssn">{{ employee.ssn }}</p>
         </div>
-        <div class="d-flex justify-content-between align-items-center">
+        <div
+          class="card-number d-flex justify-content-between align-items-center"
+        >
           <p class="label">Card</p>
-          <p class="card-number">1111-1111-1111-1111</p>
+          <p class="">{{ employee.cardNumber }}</p>
         </div>
       </div>
     </div>
