--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -738,8 +738,8 @@ Sidebar
   transition: var(--transition);
 }
 .links a:hover {
-  background: var(--clr-primary-9);
-  color: var(--clr-primary-2);
+  background: var(--primary-400);
+  color: var(--primary-100);
   padding-left: 1.75rem;
 }
 .sidebar-icons {
