--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -1,9 +1,17 @@
 <app-search (search)="search($event)"></app-search>
-<div class="employee-list">
-  <app-employee
-    *ngFor="let employee of employees"
-    [employee]="employee"
-  ></app-employee>
+<div class="employee-list" [ngClass]="{ 'no-element': notFound }">
+  <ng-container *ngIf="!notFound; else elseNotFound">
+    <app-employee
+      *ngFor="let employee of employees"
+      [employee]="employee"
+    ></app-employee>
+  </ng-container>
+  <ng-template #elseNotFound>
+    <app-not-found
+      *ngIf="notFound"
+      message="sorry no employee was found"
+    ></app-not-found>
+  </ng-template>
 </div>
 <app-pagination
   [numberOfPages]="numberOfPages"
