--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -217,10 +217,10 @@ img:not(.logo) {
 
 /* alerts */
 .alert {
-  padding: 0.375rem 0.75rem;
-  margin-bottom: 1rem;
+  /* padding: 0.375rem 0.75rem; */
+  /* margin-bottom: 1rem;
   border-color: transparent;
-  border-radius: var(--borderRadius);
+  border-radius: var(--borderRadius); */
 }
 
 .alert-danger {
@@ -461,6 +461,16 @@ Welcome
   color: var(--white);
   text-align: center;
   font-weight: 600;
+}
+
+/*
+=============== 
+Notification
+===============
+*/
+
+.notification {
+  padding: 2rem !important;
 }
 
 /*
