--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -848,7 +848,14 @@ Employee list
   place-items: center;
 }
 
-@media screen and (min-width: 1170px) {
+@media screen and (min-width: 768px) {
+  .employee-list {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .employee-list {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
