--- a/src/app/modules/auth/page/signin/signin.component.html
+++ b/src/app/modules/auth/page/signin/signin.component.html
@@ -1,8 +1,22 @@
 <div class="section-center">
   <form (ngSubmit)="onSubmit()" class="form" [formGroup]="authForm">
     <h4>Sign In</h4>
-    <app-input inputType="text" label="Username" [control]="authForm.controls.username"></app-input>
-    <app-input inputType="password" label="Password" [control]="authForm.controls.password"></app-input>
+    <app-input
+      inputType="text"
+      label="Username"
+      [control]="authForm.controls.username"
+    ></app-input>
+    <app-input
+      inputType="password"
+      label="Password"
+      [control]="authForm.controls.password"
+    ></app-input>
+    <div *ngIf="authForm.errors" class="text-danger">
+      <p *ngIf="authForm.errors['credentials']">Invalid username or password</p>
+      <p *ngIf="authForm.errors?.['unknownError']">
+        Failed to sign up,try later
+      </p>
+    </div>
     <button type="submit" class="btn btn-block">Sign In</button>
   </form>
 </div>
