--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -216,13 +216,17 @@ img:not(.logo) {
   width: 100%;
 }
 
-/* alerts */
-.alert {
-  /* padding: 0.375rem 0.75rem; */
-  /* margin-bottom: 1rem;
-  border-color: transparent;
-  border-radius: var(--borderRadius); */
+.btn-secondary {
+  background: var(--grey-500);
 }
+
+/* alerts */
+/* .alert {
+  padding: 0.375rem 0.75rem; 
+   margin-bottom: 1rem;
+  border-color: transparent;
+  border-radius: var(--borderRadius); 
+} */
 
 .alert-danger {
   color: var(--red-dark);
@@ -240,7 +244,7 @@ img:not(.logo) {
   background: var(--white);
   border-radius: var(--borderRadius);
   box-shadow: var(--shadow-2);
-  padding: 2rem 2.5rem;
+  padding: 0.5rem 1rem;
   margin: 1rem auto;
   transition: var(--transition);
 }
@@ -289,9 +293,9 @@ img:not(.logo) {
 }
 
 .loading {
-  width: 6rem;
-  height: 6rem;
-  border: 5px solid var(--grey-400);
+  width: 5rem;
+  height: 5rem;
+  border: 8px solid var(--grey-400);
   border-radius: 50%;
   border-top-color: var(--primary-500);
   animation: spinner 0.6s linear infinite;
@@ -734,6 +738,13 @@ Sidebar
 
 .overlay.show {
   visibility: visible;
+}
+
+.up-overlay {
+  z-index: 4;
+}
+
+.down-overlay {
   z-index: 1;
 }
 
@@ -802,11 +813,11 @@ Sidebar
     height: calc(100vh - var(--navbar-thin));
     z-index: 5;
   }
-
-  .show-overlay {
+  /* 
+  .show{
     visibility: visible;
     z-index: 4;
-  }
+  } */
 }
 
 /*
@@ -816,6 +827,52 @@ Not Found
 */
 
 .not-found {
+  display: flex;
+  place-items: center;
+}
+
+/*
+=============== 
+Modal
+===============
+*/
+
+.modal-title {
+  color: var(--primary-600);
+}
+
+.modal-content .close-btn {
+  font-size: 1.5rem;
+  background: transparent;
+  border-color: transparent;
+  color: var(--red-dark);
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.modal-footer {
+  gap: 1rem;
+}
+
+.modal-footer:empty {
+  display: none;
+}
+
+.modal-footer-default {
+  display: none;
+}
+
+.modal-footer:empty + .modal-footer-default {
+  display: flex;
+}
+
+/*
+=============== 
+Spinner
+===============
+*/
+
+.spinner {
   display: flex;
   place-items: center;
 }
