--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -46,7 +46,7 @@
             </span>
 
             <img
-              src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg"
+              [src]="'data:image/png;base64,' + loggedInUser.avatar"
               class="img user-img"
               alt=""
             />
