--- a/src/app/layout/sidebar/menu/menu.component.html
+++ b/src/app/layout/sidebar/menu/menu.component.html
@@ -54,10 +54,4 @@
     </li>
   </ul>
 </aside>
-<div class="overlay" [ngClass]="{ show: showMenu }">
-  <div class="modal">
-    <div class="modal-header"></div>
-    <div class="modal-content"></div>
-    <div class="modal-footer"></div>
-  </div>
-</div>
+<div class="overlay up-overlay" [ngClass]="{ show: showMenu }"></div>
