--- a/src/app/modules/hr/pages/employee/employee/employee.component.html
+++ b/src/app/modules/hr/pages/employee/employee/employee.component.html
@@ -17,14 +17,14 @@
         />
         <div>
           <h5 class="name mb-1">{{ employee.fullName }}</h5>
-          <p class="rank">{{ employee.rank }}</p>
+          <p class="rank">{{ employee.rank.name }}</p>
         </div>
       </div>
 
       <div class="flex-grow-1 ms-3">
         <div class="d-flex justify-content-between align-items-center">
           <p class="label">Department</p>
-          <p class="department">{{ employee.department }}</p>
+          <p class="department">{{ employee.department.name }}</p>
         </div>
         <div class="d-flex justify-content-between align-items-center">
           <p class="label">SSN</p>
@@ -34,7 +34,7 @@
           class="card-number d-flex justify-content-between align-items-center"
         >
           <p class="label">Card</p>
-          <p class="">{{ employee.cardNumber }}</p>
+          <p class="">{{ employee.activeCard.number }}</p>
         </div>
       </div>
     </div>
