--- a/src/app/shared/component/modal/modal.component.html
+++ b/src/app/shared/component/modal/modal.component.html
@@ -1,24 +1,19 @@
-<div class="overlay show">
-  <div class="modal-content">
+<div class="overlay show down-overlay">
+  <div class="form modal-content">
     <div class="modal-header">
-      <h5 class="modal-title">Modal title</h5>
-      <button
-        type="button"
-        class="close"
-        data-dismiss="modal"
-        aria-label="Close"
-      >
-        <span aria-hidden="true">&times;</span>
+      <h4 class="modal-title">{{ title }}</h4>
+      <button (click)="onDismissClick()" class="close-btn">
+        <i class="fas fa-times"></i>
       </button>
     </div>
     <div class="modal-body">
-      <p>Modal body text goes here.</p>
+      <ng-content></ng-content>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">
-        Close
-      </button>
-      <button type="button" class="btn btn-primary">Save changes</button>
+      <ng-content select="[modalFooter]"></ng-content>
+    </div>
+    <div class="modal-footer modal-footer-default">
+      <button type="button" class="btn btn-hipster">OK</button>
     </div>
   </div>
 </div>
