--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -6,7 +6,10 @@
     placeholder="Search"
     (input)="onSearch($any($event.target).value)"
   />
-  <button type="button" class="btn add-new-btn">
+  <button (click)="showModal = true" type="button" class="btn add-new-btn">
     <i class="fas fa-plus"></i> add new
   </button>
+  <app-modal [title]="title" (dismiss)="showModal = false" *ngIf="showModal">
+    <ng-content></ng-content>
+  </app-modal>
 </form>
