--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -1,4 +1,4 @@
-<app-search title="Add New Employee" (search)="search($event)">
+<app-search (search)="search($event)">
   <app-employee-create></app-employee-create>
 </app-search>
 
