--- a/src/app/modules/hr/pages/employee/employee/employee.component.html
+++ b/src/app/modules/hr/pages/employee/employee/employee.component.html
@@ -34,47 +34,9 @@
           class="card-number d-flex justify-content-between align-items-center"
         >
           <p class="label">Card</p>
-          <p class="">{{ employee.activeCard.number }}</p>
+          <p class="">{{ employee.activeCard?.number }}</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- <div class="card" style="border-radius: 15px; min-width: 90vw">
-  <div class="card-body p-4">
-    <div class="d-block text-black">
-      <div class="employee-img-container">
-        <img
-          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
-          alt="Generic placeholder image"
-          class="employee-img img-fluid"
-          style="
-            width: 140px;
-            border-radius: 10px;
-            border-right: 8px solid green;
-            border-left: 8px solid green;
-          "
-        />
-        <div>
-          <h5 class="mb-1">Danny McLoan</h5>
-          <p class="mb-2 pb-1" style="color: #2b2a2a">Senior Journalist</p>
-        </div>
-      </div>
-
-      <div class="employee-info flex-grow-1 ms-3">
-        <div class="d-flex justify-content-between">
-          <p>Department</p>
-          <p>IT</p>
-        </div>
-        <div class="d-flex justify-content-between">
-          <p>SSN</p>
-          <p>415-989-687-875</p>
-        </div>
-        <div class="d-flex justify-content-between">
-          <p>Card</p>
-          <p>1111-1111-1111-1111</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
