--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -253,14 +253,16 @@ img:not(.logo) {
   box-shadow: var(--shadow-4);
 }
 .form-label {
-  display: block;
+  display: flex;
+  justify-content: space-between;
   font-size: var(--small-text);
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
   text-transform: capitalize;
   letter-spacing: var(--letterSpacing);
 }
 .form-input,
 .form-textarea {
+  max-height: 2.2rem;
   width: 100%;
   padding: 0.375rem 0.75rem;
   border-radius: var(--borderRadius);
@@ -269,7 +271,7 @@ img:not(.logo) {
 }
 
 .form-row {
-  margin-bottom: 1rem;
+  margin-bottom: 0.25rem;
 }
 
 .form-textarea {
@@ -280,9 +282,14 @@ img:not(.logo) {
   color: var(--grey-400);
 }
 .form-alert {
+  font-size: 0.85rem;
   color: var(--red-dark);
   letter-spacing: var(--letterSpacing);
   text-transform: capitalize;
+}
+
+.input-errors {
+  display: flex;
 }
 /* alert */
 
@@ -346,6 +353,23 @@ img:not(.logo) {
   .section-center {
     height: calc(100vh - var(--navbar-thin));
   }
+}
+/*
+=============== 
+Input File
+===============
+*/
+.input-file {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.input-file-img {
+  border-radius: 10px;
+  height: 5rem;
+  max-width: 5rem;
+  border: none;
 }
 
 /*
@@ -726,11 +750,13 @@ Sidebar
 .overlay {
   position: fixed;
   top: var(--navbar-thick);
-  width: var(--max-width);
+  width: 100%;
+  max-width: var(--max-width);
   height: 100%;
   background: var(--grey-overlay);
   display: grid;
-  place-items: center;
+  justify-content: center;
+  align-items: start;
   transition: var(--transition);
   visibility: hidden;
   z-index: -10;
@@ -1000,4 +1026,35 @@ Single Employee
   border-radius: 10px;
   border-right: 8px solid var(--green-lime);
   border-left: 8px solid var(--green-lime);
+}
+
+/*
+=============== 
+Employee Form
+===============
+*/
+
+.employee-form {
+  display: flex;
+  gap: 1rem;
+}
+
+.employee-form-input {
+  width: 50%;
+}
+.employee-form-select {
+  width: 50%;
+}
+
+.employee-form-img {
+  padding-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.employee-form-img .employee-img {
+  height: 4rem;
+  width: 4rem;
+  border: none;
 }
