--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
-<app-search (search)="search($event)">
-  <app-employee-create></app-employee-create>
+<app-search (dismiss)="onDismiss()" (search)="search($event)">
+  <app-employee-create [reset$]="reset$"></app-employee-create>
 </app-search>
 
 <div class="employee-list" [ngClass]="{ 'no-element': notFound }">
