--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -9,7 +9,7 @@
   <button (click)="showModal = true" type="button" class="btn add-new-btn">
     <i class="fas fa-plus"></i> add new
   </button>
-  <app-modal [title]="title" (dismiss)="showModal = false" *ngIf="showModal">
+  <app-modal [title]="title" (dismiss)="onDismiss()" *ngIf="showModal">
     <ng-content></ng-content>
     <div modalFooter></div>
   </app-modal>
