--- a/src/app/modules/hr/pages/employee/employee/employee.component.html
+++ b/src/app/modules/hr/pages/employee/employee/employee.component.html
@@ -1,6 +1,6 @@
 <div class="single-employee card">
   <div class="item-icons">
-    <button type="button" class="item-icon">
+    <button type="button" class="item-icon" (click)="onEdit()">
       <i class="fas fa-pen"></i>
     </button>
     <button class="item-icon bg-danger">
